@@ -1,6 +1,6 @@
 /*
  * Translated default messages for the jQuery validation plugin.
- * Language: JA
+ * Locale: JA (Japanese)
  */
 jQuery.extend(jQuery.validator.messages, {
   required: "このフィールドは必須です。",
