@@ -1,0 +1,23 @@
+/*
+ * Translated default messages for the jQuery validation plugin.
+ * Locale: VI (Vietnamese)
+ */
+jQuery.extend(jQuery.validator.messages, {
+ required: "Hãy nhập.",
+ remote: "Hãy sửa cho đúng.",
+ email: "Hãy nhập email.",
+ url: "Hãy nhập URL.",
+ date: "Hãy nhập ngày.",
+ dateISO: "Hãy nhập ngày (ISO).",
+ number: "Hãy nhập số.",
+ digits: "Hãy nhập chữ số.",
+ creditcard: "Hãy nhập số thẻ tín dụng.",
+ equalTo: "Hãy nhập thêm lần nữa.",
+ accept: "Phần mở rộng không đúng.",
+ maxlength: jQuery.format("Hãy nhập từ {0} kí tự trở xuống."),
+ minlength: jQuery.format("Hãy nhập từ {0} kí tự trở lên."),
+ rangelength: jQuery.format("Hãy nhập từ {0} đến {1} kí tự."),
+ range: jQuery.format("Hãy nhập từ {0} đến {1}."),
+ max: jQuery.format("Hãy nhập từ {0} trở xuống."),
+ min: jQuery.format("Hãy nhập từ {1} trở lên.")
+});
